--- a/ScraperProject/frontend/src/app/components/navbar/navbar.component.html
+++ b/ScraperProject/frontend/src/app/components/navbar/navbar.component.html
@@ -5,10 +5,9 @@
     <span class="navbar-toggler-icon"></span>
   </button>
 
-
-  <form class="form-inline my-2 my-lg-0">
-    <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-    <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Buscar</button>
+  <form #articuloForm="ngForm" (ngSubmit)="getArticulos(articuloForm.value)"  class="form-inline my-2 my-lg-0">
+    <input class="form-control mr-sm-2" type="search" name="name" placeholder="Search" aria-label="Search" ngModel>
+    <button class="btn btn-outline-success my-2 my-sm-0" type="submit" >Buscar</button>
   </form>
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
@@ -19,3 +18,5 @@
 
   </div>
 </nav>
+
+<ng-content></ng-content>
