--- a/ScraperProject/frontend/src/app/components/navbar/navbar.component.html
+++ b/ScraperProject/frontend/src/app/components/navbar/navbar.component.html
@@ -6,7 +6,7 @@
   </button>
 
   <form #articuloForm="ngForm" (ngSubmit)="getArticulos(articuloForm.value)"  class="form-inline my-2 my-lg-0">
-    <input class="form-control mr-sm-2" type="search" name="name" placeholder="Search" aria-label="Search" ngModel>
+    <input class="form-control mr-sm-2" type="search" name="name" placeholder="Buscar productos..." aria-label="Search" ngModel>
     <button class="btn btn-outline-success my-2 my-sm-0" type="submit" >Buscar</button>
   </form>
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -15,8 +15,7 @@
         <a class="nav-link" href="#">Contacto</a>
       </li>
     </ul>
-
   </div>
 </nav>
 
-<ng-content></ng-content>
+<app-articulos [articulos]="articulos"></app-articulos>
