--- a/ScraperProject/frontend/src/app/components/articulos/articulos.component.css
+++ b/ScraperProject/frontend/src/app/components/articulos/articulos.component.css
@@ -1,29 +1,51 @@
-.example-card {
-    display: block;
-    padding: 45px 0;
-    border-radius: 5px;
-    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
-    transition: all 0.3s cubic-bezier(.25, .8, .25, 1);
-    max-width: 50vw;
-}
- 
-.example-card:hover {
-    box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
-}
-
-.columna {
-    padding-top: 5vh;
-    padding-bottom: 5vh;
+    .example-card {
+        display: block;
+        padding: 45px 0;
+        border-radius: 5px;
+        box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+        transition: all 0.3s cubic-bezier(.25, .8, .25, 1);
+        max-width: 50vw;
+    }
     
-}
-
-.img_articulo {
+    .example-card:hover {
+        box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
+    }
     
-    max-height: 350px;
-    max-width: 100%;
-    margin-left: 0vh;
-    margin-right: 0vh;
-
-}
-
-
+    .columna {
+        padding-top: 5vh;
+        padding-bottom: 5vh;
+    }
+    
+    .img_articulo {
+        max-height: 350px;
+        max-width: 100%;
+        margin-left: 0vh;
+        margin-right: 0vh;
+    }
+    
+    .column-left {
+        float: left;
+        width: 32%;
+    }
+    
+    .column-right {
+        float: right;
+        width: 32%;
+    }
+    
+    .column-center {
+        /* display: inline-block; */
+        display: inline-table;
+        width: 32%;
+        margin-left: 1.6vw;
+    }
+    
+    @media screen and (max-width: 767px) {
+        .column-left,
+        .column-center,
+        .column-right {
+            width: 100%;
+            float: none;
+            margin: 1;
+        }
+    }
