--- a/ScraperProject/frontend/src/app/components/navbar/navbar.component.html
+++ b/ScraperProject/frontend/src/app/components/navbar/navbar.component.html
@@ -1,21 +1,20 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <a class="navbar-brand" href="#">Navbar</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-    aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <a class="navbar-brand" href="#">Navbar</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
 
-  <form #articuloForm="ngForm" (ngSubmit)="getArticulos(articuloForm.value)"  class="form-inline my-2 my-lg-0">
-    <input class="form-control mr-sm-2" type="search" name="name" placeholder="Buscar productos..." aria-label="Search" ngModel>
-    <button class="btn btn-outline-success my-2 my-sm-0" type="submit" >Buscar</button>
-  </form>
-  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav mr-auto">
-      <li class="nav-item">
-        <a class="nav-link" href="#">Contacto</a>
-      </li>
-    </ul>
-  </div>
+    <form #articuloForm="ngForm" (ngSubmit)="getArticulos(articuloForm.value)" class="form-inline my-2 my-lg-0">
+        <input class="form-control mr-sm-2" type="search" name="name" placeholder="Buscar productos..." aria-label="Search" ngModel>
+        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Buscar</button>
+    </form>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+            <li class="nav-item">
+                <a class="nav-link" href="#">Contacto</a>
+            </li>
+        </ul>
+    </div>
 </nav>
 
 <app-articulos [articulos]="articulos"></app-articulos>
