fix emparejo columnas

--- a/ScraperProject/frontend/src/app/components/sidenav/sidenav.component.html
+++ b/ScraperProject/frontend/src/app/components/sidenav/sidenav.component.html
@@ -25,7 +25,7 @@
                                 Mercadolibre
                             </mat-panel-title>
                             <mat-panel-description>
-                                Type your name and age
+                                Filtros
                             </mat-panel-description>
                         </mat-expansion-panel-header>
 
@@ -43,7 +43,20 @@
                                 Amazon
                             </mat-panel-title>
                             <mat-panel-description>
-                                Currently I am {{panelOpenState ? 'open' : 'closed'}}
+                                <!-- Currently I am {{panelOpenState ? 'open' : 'closed'}} -->
+
+                            </mat-panel-description>
+                        </mat-expansion-panel-header>
+                        <p>I'm visible because I am open</p>
+                    </mat-expansion-panel>
+                    <mat-expansion-panel (opened)="panelOpenState = true" (closed)="panelOpenState = false">
+                        <mat-expansion-panel-header>
+                            <mat-panel-title>
+                                Ebay
+                            </mat-panel-title>
+                            <mat-panel-description>
+                                <!-- Currently I am {{panelOpenState ? 'open' : 'closed'}} -->
+
                             </mat-panel-description>
                         </mat-expansion-panel-header>
                         <p>I'm visible because I am open</p>
@@ -55,11 +68,6 @@
         <mat-sidenav-content>
 
             <app-articulos [articulos]="articulos"></app-articulos>
-
-
-
-
-
 
         </mat-sidenav-content>
     </mat-sidenav-container>
