--- a/ScraperProject/frontend/src/app/components/articulos/articulos.component.css
+++ b/ScraperProject/frontend/src/app/components/articulos/articulos.component.css
@@ -1,10 +1,17 @@
+    .mat-card-header .mat-card-title {
+        height: 15vh;
+        overflow: hidden;
+        text-overflow: ellipsis;
+    }
+    
     .example-card {
         display: block;
-        padding: 45px 0;
+        padding: 7% 0;
         border-radius: 5px;
         box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
         transition: all 0.3s cubic-bezier(.25, .8, .25, 1);
         max-width: 50vw;
+        height: 145vh;
         margin-top: 0.5vw;
         margin-bottom: 0.5vw;
     }
@@ -49,5 +56,8 @@
             width: 100%;
             float: none;
             margin: 1;
+        }
+        .example-card {
+            height: 120vh;
         }
     }
