--- a/ScraperProject/frontend/src/app/components/articulos/articulos.component.html
+++ b/ScraperProject/frontend/src/app/components/articulos/articulos.component.html
@@ -3,9 +3,9 @@
     <!-- <div class="col-sm-4 col-md-4 col-lg-4 col-xl-4 columna"> -->
 
     <div class="column-center">
-        <mat-card class="example-card" *ngFor="let articulo of articulos; index as i;">
+        <mat-card class="example-card" *ngFor="let articulo of articulosAmazon; index as i;">
             <mat-card-header>
-                <div mat-card-avatar class="example-header-image" style="background-image: url('https://pbs.twimg.com/profile_images/3596669314/95250957ca13505b8668022fcc830da5.jpeg'); background-size: cover;">
+                <div mat-card-avatar class="example-header-image" style="background-image: url('../../../assets/iconos/amazonIcono.png'); background-size: cover;">
                 </div>
                 <mat-card-title> {{articulo.titulo}} </mat-card-title>
                 <mat-card-subtitle> {{articulo.ecommerce}}</mat-card-subtitle>
