--- a/ScraperProject/frontend/src/app/components/articulos/articulos.component.css
+++ b/ScraperProject/frontend/src/app/components/articulos/articulos.component.css
@@ -1,5 +1,5 @@
     .mat-card-header .mat-card-title {
-        height: 5ch;
+        height: 6ch;
         overflow: hidden;
         text-overflow: ellipsis;
     }
@@ -11,7 +11,7 @@
         box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
         transition: all 0.3s cubic-bezier(.25, .8, .25, 1);
         max-width: 50vw;
-        height: 90vh;
+        height: 65vh;
         margin-top: 0.5vw;
         margin-bottom: 0.5vw;
     }
@@ -23,6 +23,10 @@
     .columna {
         padding-top: 5vh;
         padding-bottom: 5vh;
+    }
+    
+    .contenedorImagen {
+        height: 40vh;
     }
     
     .img_articulo {
