detalles articulo html

--- a/ScraperProject/frontend/src/app/components/articulos/articulos.component.html
+++ b/ScraperProject/frontend/src/app/components/articulos/articulos.component.html
@@ -18,12 +18,11 @@
                 </a>
             </div>
 
-
             <mat-card-actions>
                 <div class="clearfix" style="overflow: hidden; ">
 
-                    <h1 style="padding-left: 7vh; float:left;">
-                        {{articulo.precio}}
+                    <h1 class="precio">
+                        US$ {{articulo.precio}}
                     </h1>
                     <div style="max-width: max-content; max-height: max-content; float:right" align="end">
                         <button mat-button style="font-size: 20px;">Boton de momento</button>
@@ -54,7 +53,7 @@
             <mat-card-actions>
                 <div class="clearfix" style="overflow: hidden; ">
 
-                    <h1 style="padding-left: 7vh; float:left;">
+                    <h1 class="precio">
                         {{articulo.precio}}
                     </h1>
                     <div style="max-width: max-content; max-height: max-content; float:right" align="end">
@@ -86,7 +85,7 @@
             <mat-card-actions>
                 <div class="clearfix" style="overflow: hidden; ">
 
-                    <h1 style="padding-left: 7vh; float:left;">
+                    <h1 class="precio">
                         {{articulo.precio}}
                     </h1>
                     <div style="max-width: max-content; max-height: max-content; float:right" align="end">
