--- a/ScraperProject/frontend/src/app/components/articulos/articulos.component.css
+++ b/ScraperProject/frontend/src/app/components/articulos/articulos.component.css
@@ -1,5 +1,9 @@
+    .mat-card-actions {
+        margin-top: 12%;
+    }
+    
     .mat-card-header .mat-card-title {
-        height: 6ch;
+        height: 9vh;
         overflow: hidden;
         text-overflow: ellipsis;
     }
@@ -11,7 +15,7 @@
         box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
         transition: all 0.3s cubic-bezier(.25, .8, .25, 1);
         max-width: 50vw;
-        height: 65vh;
+        height: 78vh;
         margin-top: 0.5vw;
         margin-bottom: 0.5vw;
     }
@@ -30,8 +34,8 @@
     }
     
     .img_articulo {
-        max-height: 350px;
-        max-width: 100%;
+        height: 45vh;
+        width: 100%;
         margin-left: 0vh;
         margin-right: 0vh;
     }
@@ -53,6 +57,11 @@
         margin-left: 1.6vw;
     }
     
+    .precio {
+        margin-left: 9%;
+        float: left;
+    }
+    
     @media screen and (max-width: 767px) {
         .column-left,
         .column-center,
@@ -61,7 +70,28 @@
             float: none;
             margin: 1;
         }
+        .mat-card {
+            margin-top: 2vh;
+        }
         .example-card {
-            height: 120vh;
+            height: 50vh;
+            width: auto;
+        }
+        .mat-card-header .mat-card-title {
+            height: 4vh;
+            overflow: hidden;
+            text-overflow: ellipsis;
+        }
+        .contenedorImagen {
+            height: 25vh;
+        }
+        .img_articulo {
+            height: 25vh;
+            width: 100%;
+            margin-left: 0vh;
+            margin-right: 0vh;
+        }
+        .mat-card-actions {
+            margin-top: 5%;
         }
     }
