detalle component falta solo el footer

--- a/ScraperProject/frontend/src/app/components/articulos/articulos.component.html
+++ b/ScraperProject/frontend/src/app/components/articulos/articulos.component.html
@@ -97,7 +97,10 @@
                                                                                    imagen: articulo.imagen | json,
                                                                                    stock: articulo.stock | json,
                                                                                    comentario: articulo.respuesta | json,
-                                                                                   ecommerce: articulo.ecommerce | json}">Detalle</a>
+                                                                                   ecommerce: articulo.ecommerce | json,
+                                                                                   fecha: articulo.fecha | json,
+                                                                                   respuesta: articulo.respuesta | json,
+                                                                                   url : articulo.url | json}">Detalle</a>
                         </nav>
                     </div>
                 </div>
