--- a/ScraperProject/frontend/src/app/components/detalle-articulo/detalle-articulo.component.css
+++ b/ScraperProject/frontend/src/app/components/detalle-articulo/detalle-articulo.component.css
@@ -1,6 +1,25 @@
+:host {
+    size: 200px 200px;
+    display: block;
+}
+
+.container {
+    margin-top: 3vh;
+}
+
+.descripcion {
+    margin: 4%;
+}
+
 img {
     width: 55%;
     height: auto;
+    margin: 3vw;
+}
+
+img:hover {
+    box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
+    cursor: pointer;
 }
 
 .titulo {
