--- a/ScraperProject/frontend/src/app/components/detalle-articulo/detalle-articulo.component.html
+++ b/ScraperProject/frontend/src/app/components/detalle-articulo/detalle-articulo.component.html
@@ -1,37 +1,58 @@
-<div class="fondo">
+<mat-toolbar class="example-toolbar">
 
-
-
-    <mat-toolbar class="example-toolbar">
-
-        <h1 class="example-app-name">Scrappers App</h1>
-        <div class="clearfix" style="max-width: max-content; margin-left: 3%;">
-            <div style="max-width: fit-content;">
-
-            </div>
+    <h1 class="example-app-name">Scrappers App</h1>
+    <div class="clearfix" style="max-width: max-content; margin-left: 3%;">
+        <div style="max-width: fit-content;">
 
         </div>
 
-    </mat-toolbar>
+    </div>
 
-    <div class="main-container" style="display: flex;">
-
-        <div>
-
-            <img [src]="imagen" style="display: block;" class="rounded float-left img-fluid" alt="Imagen de Articulo">
+</mat-toolbar>
 
 
 
-            <h1 class="display-3 titulo" style="margin: 3%;">{{titulo}}</h1>
-
-            <h1 class="display-1 precio" style="margin: 3%">{{precio}}</h1>
 
 
-            <h1 class="display-2 stock" style="margin: 3%; color:forestgreen" *ngIf="stock">En Stock.</h1>
-            <h1 class="display-2 stock" style="margin: 3%; color:maroon" *ngIf="!stock">Probablemente no haya stock.</h1>
+<div class="container" style="display: flex;">
+
+    <div>
+        <a [href]=url target="_blank">
+            <img [src]="imagen" style="display: block;  border: 2px solid ;
+            border-radius: 12px;" class="rounded float-left img-fluid" alt="Imagen de Articulo">
+
+        </a>
+        <div class="descripcion">
+            <h1 class="display-3 titulo" style="margin: 3%; font-weight: bold;">{{titulo}}</h1>
+
+            <h1 class="display-1 precio" style="margin: 3%">{{precio}} </h1>
+            <h2 style="    position: relative;
+            left: 12vw;
+            font-weight: normal;">+ Envío</h2>
+
+            <h2>Articulo proveniente de {{ecommerce}}</h2>
+
+            <h1 class="display-2 stock" style="color:forestgreen; font-weight: bold;" *ngIf="stock">En Stock.</h1>
+            <h1 class="display-2 stock" style="color:maroon" *ngIf="!stock">Consultar stock.</h1>
+            <h2 class="display-2 stock" *ngIf="!stock && ecommerce=='Mercadolibre'">
+                No se ha confirmado el stock desde hace más de dos semanas
+            </h2>
+
+            <button type="button" class="btn btn-primary">Agregar a favoritos</button>
         </div>
 
 
     </div>
 
+
+</div>
+
+<hr>
+
+<div class="alert alert-success" role="alert" style="margin:8%;
+border-radius: 12px;" *ngIf="stock &&  ecommerce=='Mercadolibre'">
+    <h2 class="display-2 alert-heading">El vendedor a respondido el {{fecha}} lo siguiente:</h2>
+    <hr>
+    <p style=" 
+        border-radius: 12px; font-style: italic; font-size:1.1rem;">"{{respuesta}}"</p>
 </div>
