--- a/ScraperProject/frontend/src/app/components/articulos/articulos.component.html
+++ b/ScraperProject/frontend/src/app/components/articulos/articulos.component.html
@@ -25,7 +25,7 @@
                         US$ {{articulo.precio}}
                     </h1>
                     <div style="max-width: max-content; max-height: max-content; float:right" align="end">
-                        <button mat-button style="font-size: 20px;">Boton de momento</button>
+                        <button mat-button style="font-size: 20px;">{{valorDolar}}</button>
                     </div>
                 </div>
 
