--- a/ScraperProject/frontend/src/app/components/sidenav/sidenav.component.html
+++ b/ScraperProject/frontend/src/app/components/sidenav/sidenav.component.html
@@ -67,7 +67,7 @@
 
         <mat-sidenav-content>
 
-            <app-articulos [articulos]="articulos" [articulosAmazon]="articulosAmazon"></app-articulos>
+            <app-articulos [articulos]="articulos" [articulosAmazon]="articulosAmazon" [articulosEbay]="articulosEbay"></app-articulos>
 
 
         </mat-sidenav-content>
