--- a/ScraperProject/frontend/src/app/components/articulos/articulos.component.html
+++ b/ScraperProject/frontend/src/app/components/articulos/articulos.component.html
@@ -1,4 +1,4 @@
-<div class="container " *ngIf="mostrar">
+<div class="container ">
     <!-- <div class="row" *ngFor="let articulo of articulos; index as i;"> -->
     <!-- <div class="col-sm-4 col-md-4 col-lg-4 col-xl-4 columna"> -->
 
