--- a/ScraperProject/frontend/src/app/components/sidenav/sidenav.component.css
+++ b/ScraperProject/frontend/src/app/components/sidenav/sidenav.component.css
@@ -46,6 +46,21 @@ h1.example-app-name {
     margin-right: 3vw;
 }
 
+.btn-danger {
+    margin-right: 3vw;
+}
+
+.avatar {
+    vertical-align: middle;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+}
+
+.botonFavorito {
+    margin-right: 2vw;
+}
+
 @media screen and (max-width: 767px) {
     .mat-sidenav {
         width: 40%;
