--- a/ScraperProject/frontend/src/app/components/detalle-articulo/detalle-articulo.component.html
+++ b/ScraperProject/frontend/src/app/components/detalle-articulo/detalle-articulo.component.html
@@ -16,32 +16,38 @@
 
 <div class="container" style="display: flex;">
 
-    <div>
-        <a [href]=url target="_blank">
-            <img [src]="imagen" style="display: block;  border: 2px solid ;
+    <div class="row">
+        <div class="col">
+
+            <a [href]=url target="_blank">
+                <img [src]="imagen" style="display: block;  border: 2px solid ;
             border-radius: 12px;" class="rounded float-left img-fluid" alt="Imagen de Articulo">
 
-        </a>
-        <div class="descripcion">
-            <h1 class="display-3 titulo" style="margin: 3%; font-weight: bold;">{{titulo}}</h1>
+            </a>
 
-            <h1 class="display-1 precio" style="margin: 3%">{{precio}} </h1>
-            <h2 style="    position: relative;
+        </div>
+
+        <div class="col">
+            <div class="descripcion">
+                <h1 class="display-3 titulo" style="margin: 3%; font-weight: bold;">{{titulo}}</h1>
+
+                <h1 class="display-1 precio" style="margin: 3%">{{precio}} </h1>
+                <h2 style="    position: relative;
             left: 12vw;
             font-weight: normal;">+ Envío</h2>
 
-            <h2>Articulo proveniente de {{ecommerce}}</h2>
+                <h2>Articulo proveniente de {{ecommerce}}</h2>
 
-            <h1 class="display-2 stock" style="color:forestgreen; font-weight: bold;" *ngIf="stock">En Stock.</h1>
-            <h1 class="display-2 stock" style="color:maroon" *ngIf="!stock">Consultar stock.</h1>
-            <h2 class="display-2 stock" *ngIf="!stock && ecommerce=='Mercadolibre'">
-                No se ha confirmado el stock desde hace más de dos semanas
-            </h2>
+                <h1 class="display-2 stock" style="color:forestgreen; font-weight: bold;" *ngIf="stock">En Stock.</h1>
+                <h1 class="display-2 stock" style="color:maroon" *ngIf="!stock">Consultar stock.</h1>
+                <h2 class="display-2 stock" *ngIf="!stock && ecommerce=='Mercadolibre'">
+                    No se ha confirmado el stock desde hace más de dos semanas
+                </h2>
 
-            <button type="button" class="btn btn-primary">Agregar a favoritos</button>
+                <button type="button" class="btn btn-primary">Agregar a favoritos</button>
+            </div>
+
         </div>
-
-
     </div>
 
 
