--- a/ScraperProject/frontend/src/app/components/detalle-articulo/detalle-articulo.component.html
+++ b/ScraperProject/frontend/src/app/components/detalle-articulo/detalle-articulo.component.html
@@ -11,9 +11,6 @@
 </mat-toolbar>
 
 
-
-
-
 <div class="container" style="display: flex;">
 
     <div class="row">
@@ -44,7 +41,7 @@
                     No se ha confirmado el stock desde hace más de dos semanas
                 </h2>
 
-                <button type="button" class="btn btn-primary">Agregar a favoritos</button>
+                <button type="button" class="btn btn-primary" (click)="addFavorite()">Agregar a favoritos</button>
             </div>
 
         </div>
